--- a/app/views/experiences/_sort_result.html.erb
+++ b/app/views/experiences/_sort_result.html.erb
@@ -6,8 +6,8 @@
 <%= experience.title %>
 <% end %>
 </th>
-<td>☆ <%= experience.favorites.count %></td>
-<td>コメント(<%= experience.comments.count %>)</td>
+<td><i class="fa-regular fa-star"></i><%= experience.favorites.count %></td>
+<td><i class="fa-solid fa-message"></i>(<%= experience.comments.count %>)</td>
 </tr>
 <tr>
 <td>
