--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -10,12 +10,12 @@
 
 <div class ="botton-box">
 <%= link_to new_user_registration_path do %>
-<p class ="text-white lead">今すぐ始める</p>
+<p class ="text-blue lead">今すぐ始める</p>
 <% end %>
 
 <p class ="text-white lead">既にご登録済みの方は</p>
 <%= link_to new_user_session_path do %>
-<pp class ="text-white lead">こちら</p>
+<p class ="text-blue lead">こちら</p>
 <% end %>
 </div>
 </div>
