--- a/app/assets/stylesheets/experiences.scss
+++ b/app/assets/stylesheets/experiences.scss
@@ -26,7 +26,7 @@
 .experience-list{
   margin: 20px 70px;
   padding: 20px;
-  border: 1px solid;
+  border: 1px solid rgba(0,0,0,0.3);
 }
 
 .show{
@@ -46,7 +46,7 @@
 
 .col-4{
   margin: 20px 0;
-  border: 1px solid;
+  border: 1px solid rgba(0,0,0,0.3);
 }
 
 .col-3{
@@ -78,4 +78,9 @@
 .genre-edit-box{
   width: 100%;
   height: 500px;
+}
+
+.error{
+  color: red;
+  margin: 10px auto;
 }
