--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,29 +18,34 @@
   <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
     <%= link_to root_path do %>
-    <h4>Success! Job Hunting</h4>
+    <h3 class = "title-text">Success! Job Hunting</h3>
     <% end %>
 
     <%= link_to experiences_path do %>
-    <p>投稿一覧</p>
+    <i class="fa-solid fa-list icon"></i>
+    <p class = "text-black text-list">投稿一覧</p>
     <% end %>
-   <% if user_signed_in? %>
+  <% if user_signed_in? %>
 
     <%= link_to user_path(current_user.id) do %>
-    <p>マイページ</p>
+    <i class="fa-solid fa-user-tag icon"></i>
+    <p class = "text-black text-list">マイページ</p>
     <% end %>
 
     <%= link_to destroy_user_session_path, method: :delete do %>
-    <p>ログアウト</p>
+    <i class="fa-solid fa-right-from-bracket icon"></i>
+    <p class = "text-black text-list">ログアウト</p>
     <% end %>
 
-   <% else %>
+  <% else %>
     <%= link_to new_user_registration_path do %>
-    <p>新規登録</p>
+    <i class="fa-solid fa-user-plus icon"></i>
+    <p class = "text-black text-list">新規登録</p>
     <% end %>
 
     <%= link_to new_user_session_path do %>
-    <p>ログイン</p>
+    <i class="fa-solid fa-right-to-bracket icon"></i>
+    <p class = "text-black text-list">ログイン</p>
     <% end %>
   <% end %>
   </div>
@@ -51,7 +56,11 @@
   <footer class="bg-dark text-white pt-5 pb-4">
   <div class="container">
   <div class="row no-gutters">
-  <div class="col-md-4">
+  <div class="col-md-5">
+  <h5 class = "text-white footer-text">Success! Job Hunting</h5>
+  </div>
+  <div class="col-md-7">
+  <h6 class="text-white mt-2 mb-3">CopyRight 2022 SJH</h6>
   </div>
   </div>
   </div>
