--- a/app/views/experiences/_sort_result.html.erb
+++ b/app/views/experiences/_sort_result.html.erb
@@ -22,6 +22,9 @@
 <td>業種：<%= experience.genre.name %></td>
 </tr>
 <tr>
+<td>投稿日時：<%= experience.created_at.strftime('%Y/%m/%d') %></td>
+</tr>
+<tr>
 <% if user_signed_in? %>
 <% if current_user.admin? %>
 <% current_user.admin == true %>
@@ -37,4 +40,4 @@
 <% end %>
 </table>
 
-<%= paginate experiences %>
+<%= will_paginate experiences %>
