--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -31,7 +31,7 @@
 <div class="container">
 <div class="row">
 <div class ="col-m-4"></div>
-<table class = "genre-box" width="50%">
+<table class = "genre-table" width="50%">
 <tbody>
 <tr>
 <th>
