--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -13,7 +13,7 @@
 
 .top-box{
   width: 600px;
-  height: 500px;
+  height: 280px;
   margin: 70px auto;
 }
 
@@ -45,11 +45,11 @@
   @media screen and (max-width: 425px) {
     .text-box {
      width: 100%;
-     margin-left: 5px;
+     margin-left: 50px;
     }
     .botton-box {
      width: 100%;
-     margin-left: 5px;
+     margin-left: 50px;
     }
 }
 
@@ -57,6 +57,14 @@
     #top {
      width: 115%;
     }
-}
+} 
+  @media screen and (max-width: 320px){
+    .text-box {
+     margin-left: 80px;
+    }
+    .botton-box {
+     margin-left: 80px;
+    }
+  }
 
 
