--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
 <div class="row">
-<div class = "col-2"></div>
-<div class = "col-6">
+<div class = "col-lg-2 col-md-0"></div>
+<div class = "col-lg-6 col-md-12">
 <h3 class = "experience-list">みんなの投稿</h3>
 <%= render 'sort'%>
 
 <%= render 'sort_result', experiences: @experiences %>
 </div>
 
-<div class = "col-4">
+<div class = "col-lg-4 col-md-12">
 <div class = "company-search">
 <p>企業名検索</p>
 </div>
@@ -36,7 +36,7 @@
 <%= f.submit '検索' %>
 </div>
 <% end %>
-
 </div>
+
 </div>
 </div>
