--- a/app/views/experiences/edit.html.erb
+++ b/app/views/experiences/edit.html.erb
@@ -16,7 +16,7 @@
 <%= f.collection_select(:genre_id, @genres, :id ,:name, {prompt: "選択してください"}) %></br>
 </br>
 選考状況</br>
-<%= f.select :situation, [['一次','一次'],['二次','二次'],['三次','三次'],['三次以降','三次以降'],['最終','最終']], include_blank: "選択して下さい" %></br>
+<%= f.select :situation, [['非公開','非公開'],['一次','一次'],['二次','二次'],['三次','三次'],['三次以降','三次以降'],['最終','最終']], include_blank: "選択して下さい" %></br>
 </br>
 時間</br>
 <%= f.select :time, [['30分未満','30分未満'],['約30分','約30分'],['約45分','約45分'],['約1時間','約1時間'],['1時間以上','1時間以上']], include_blank: "選択して下さい" %></br>
