--- a/app/views/users/unsubscribe.html.erb
+++ b/app/views/users/unsubscribe.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
 <div class = "mx-auto"></div>
 <div class = "unsubscribe-box">
-<h2>本当にに退会しますか？</h2>
+<h2>本当に退会しますか？</h2>
 <p>退会後は他ユーザーの投稿は閲覧可能のままですが、</br>
 自身での投稿はできなくなります。</br>
 退会する場合は、「退会する」をクリックしてください。</p>
