--- a/app/assets/stylesheets/experiences.scss
+++ b/app/assets/stylesheets/experiences.scss
@@ -29,6 +29,9 @@
   border: 1px solid rgba(0,0,0,0.3);
   font-family: sans-serif;
 }
+.list-box{
+  height: 400px;  
+}
 
 .show{
   margin: 20px 70px;
