--- a/app/views/experiences/_sort_result.html.erb
+++ b/app/views/experiences/_sort_result.html.erb
@@ -1,3 +1,4 @@
+<div class = "list-box">
 <table class = "experience-table">
 <% experiences.each do |experience| %>
 <tbody>
@@ -41,3 +42,4 @@
 </table>
 
 <%= will_paginate experiences %>
+</div>
