--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
 <div class = "col-lg-2 col-md-0"></div>
 <div class = "col-lg-6 col-md-12">
-<h3 class = "experience-list">minnの投稿</h3>
+<h3 class = "experience-list">皆の投稿</h3>
 <%= render 'sort'%>
 
 <%= render 'sort_result', experiences: @experiences %>
