--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -9,6 +9,8 @@
 <% end %>
 </div>
 
+
+
 <h3 class = "show">あなたの体験記</h3>
 <%= form_with model: @experience, url: experiences_path, local: true do |f| %>
 <body id = "experience">
@@ -45,5 +47,7 @@
 <input class="btn btn-primary" type="submit" style="width:220px" value="投稿">
 </div>
 <% end %>
-
+</div>
+</div>
+</div>
 </body>
