--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -9,7 +9,9 @@
 <% end %>
 </div>
 
-
+<div class="container">
+<div class="row">
+<div class = "mx-auto"></div>
 
 <h3 class = "show">あなたの体験記</h3>
 <%= form_with model: @experience, url: experiences_path, local: true do |f| %>
@@ -43,11 +45,11 @@
 </br>
 <div class = "check">*は必須項目です</div>
 </br>
+</div>
 <div class = "post-button">
 <input class="btn btn-primary" type="submit" style="width:220px" value="投稿">
 </div>
 <% end %>
-</div>
 </div>
 </div>
 </body>
