--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -36,13 +36,13 @@
 形式</br>
 <%= @experience.format %></br>
 </br>
-<p>雰囲気</p>
+雰囲気</br>
 <%= @experience.atomosphere %>
 </br>
-<p>質問</p>
+質問</br>
 <%= @experience.question %>
 </br>
-<p>感想</p>
+感想</br>
 <%= @experience.impression %>
 </div>
 
