--- a/app/assets/stylesheets/genres.scss
+++ b/app/assets/stylesheets/genres.scss
@@ -18,8 +18,13 @@ table td {
 }
 
 .genre-edit-box{
-  width: 100%;
   height: 500px;
+  margin-left: 300px;
+}
+@media screen and (max-width: 768px) {
+  .genre-edit-box{
+    margin-left: 150px;
+  }
 }
 @media screen and (max-width: 425px) {
   .genre-box{
@@ -30,18 +35,12 @@ table td {
     margin-left: 60px;
   }
   .genre-edit-box{
-    width: 120%;
-    margin-right: 30px;
+    margin-left: 30px;
   }
 }
 @media screen and (max-width: 375px) {
   .genre-box{
     margin-left: 110px;
-  }
-  
-  .genre-edit-box{
-    width: 115%;
-    margin-right: 30px;
   }
 }
 
@@ -50,9 +49,5 @@ table td {
     margin-left: 100px;
     width: 90%;
   }
-  
-  .genre-edit-box{
-    width: 125%;
-    margin-right: 30px;
-  }
+
 }
