--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
 </tr>
 <tr>
 <th>自己紹介</th>
-<td><%= @user.introduction %></td>
+<td><%=safe_join(@user.introduction.split("\n"),tag(:br))%></td>
 </tr>
 <tr>
 <th>ユーザー情報</th>
