--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -15,7 +15,7 @@
 <% end %>
 
 <p class = "text-white lead">既にご登録済みの方は</p>
-<%= link_to new_user_session_path,class: 'link' do %>
+<%= link_to new_user_session_path do %>
 <p class = "text-blue lead">こちら</p>
 <% end %>
 </div>
