--- a/app/views/genres/edit.html.erb
+++ b/app/views/genres/edit.html.erb
@@ -1,4 +1,4 @@
-<h3 class = "show">ジャンル編集</h3>
+<h3 class = "show">業種編集</h3>
 <%= form_with model: @genre, url: genre_path, local: true do |f| %>
 <div class = "genre-edit-box">
 <table>
