--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,4 +1,4 @@
-<h3 class = "show">ジャンル一覧・追加</h3>
+<h3 class = "show">業種一覧・追加</h3>
 <%= form_with model: @genre,url: genres_path, local: true do |f| %>
 <table class = "genre-box">
 <tbody>
