--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -56,7 +56,7 @@
 <% if @user.admin? %>
 <% @user.admin == true %>
 <%= link_to genres_path do %>
-<button type="button" class="btn btn-primary" style="width:600px">ジャンル追加・一覧</button>
+<button type="button" class="btn btn-primary" style="width:600px">業種一覧・追加</button>
 <% end %>
 <% else %>
 <% end %>
