--- a/app/assets/stylesheets/experiences.scss
+++ b/app/assets/stylesheets/experiences.scss
@@ -11,6 +11,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(192, 192, 192, 0.5);
+  padding-bottom: 100px;
 }
 
 .experience-box{
@@ -173,6 +174,11 @@ ul{
   .col-lg-4{
     border: none;
     margin-left: 80px;
+  }
+  .post-button{
+    margin: auto;
+    padding: 30px;
+    text-align: center;
   }
 }
  @media screen and (max-width: 375px) {
