--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,6 @@
   </head>
 
   <body class="d-flex flex-column vh-100">
-  <div class = "footer-box">
   <header class="shadow-sm bg-white">
   <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
@@ -53,7 +52,7 @@
   </nav>
   </header>
     <%= yield %>
-  </body>
+  <main></main>
   <footer class="bg-dark text-white pt-5 pb-4">
   <div class="container">
   <div class="row no-gutters">
@@ -66,5 +65,5 @@
   </div>
   </div>
   </footer>
-  </div>
+  </body>
 </html>
